appId: com.example.jawara
---
# Navigasi ke halaman Tambah Pemasukan
- assertVisible: "Tambah Pemasukan"

# Input nama Pemasukan
- tapOn:
    point: "50%,20%"
- inputText: "Test Pemasukan Integration"
- hideKeyboard

# Pilih kategori Pemasukan
- tapOn:
    point: "50%,40%"
- tapOn:
    text: "Donasi"

# Input nominal Pemasukan
- tapOn:
    point: "50%,50%"
- inputText: "12345"
- hideKeyboard

# Simpan Pemasukan
- tapOn:
    text: "Simpan"

# Verifikasi dialog sukses muncul
- assertVisible: "Berhasil!"
- tapOn:
    text: "OK"


# Edit Pemasukan
- tapOn:
    point: "70%,40%"
- tapOn:
    point: "50%,50%"
- inputText: "5"
- hideKeyboard
- tapOn:
    text: "Simpan Perubahan"

# Verifikasi dialog sukses edit
- assertVisible: "Berhasil!"
- tapOn:
    text: "OK"

# Hapus Pemasukan
- tapOn:
    point: "80%,40%"
- tapOn:
    text: "Hapus"

